fix profile overflow

--- a/frontend/public/stylesheets/profile.css
+++ b/frontend/public/stylesheets/profile.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     background-color: rgb(39, 39, 66);
+    overflow: auto;
 }
 .dogs-profile-container {
     font-family: 'Mukta Vaani', sans-serif;
